--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "express": "^4.16.2",
     "helmet": "^3.9.0",
     "mocha": "^4.0.1",
+    "morgan": "^1.9.0",
+    "nconf": "^0.9.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "redis": "^2.8.0",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
